# ray_tracer

./: CMakeLists.txt
include/: AABB.hpp  Color.hpp  Image.hpp  Light.hpp  Material.hpp  OctTree.hpp  OctTreeNode.hpp  Parser.hpp  RGB.hpp  Ray.hpp  Scene.hpp  Triangle.hpp  Vector.hpp  Voxel.hpp
resources/: vertex_ut_input.material  vertex_ut_input.model
src/: AABB.cpp  CMakeLists.txt  Color.cpp  Image.cpp  OctTree.cpp  OctTreeNode.cpp  Parser.cpp  Scene.cpp  Triangle.cpp  main.cpp
test/: AABBUT.cpp  CMakeLists.txt  ColorUT.cpp  OctTreeNodeUT.cpp  ParserUT.cpp  TriangleUT.cpp  VectorUT.cpp
